--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -22,4 +22,4 @@ jobs:
     - name: Build
       run: dotnet build IntermediatesRemover/IntermediatesRemover.sln --configuration Release --no-restore
     - name: Test
-      run: dotnet test --no-restore --verbosity normal
+      run: dotnet test IntermediatesRemover --no-restore --verbosity normal
