--- a/IntermediatesRemover/IntermediatesRemoverCli/Properties/launchSettings.json
+++ b/IntermediatesRemover/IntermediatesRemoverCli/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "IntermediatesRemoverCli": {
       "commandName": "Project",
-      "commandLineArgs": "-r \"C:\\Projects\""
+      "commandLineArgs": "-r \"C:\\Projects\\MetPro\""
     }
   }
 }
