PDB files removed for Release

--- a/IntermediatesRemover/IntermediatesRemoverCli/IntermediatesRemoverCli.csproj
+++ b/IntermediatesRemover/IntermediatesRemoverCli/IntermediatesRemoverCli.csproj
@@ -7,6 +7,11 @@
     <CodeAnalysisRuleSet>..\IntermediatesRemover.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>none</DebugType>
+    <DebugSymbols>false</DebugSymbols>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.8.0" />
     <PackageReference Include="JetBrains.Annotations" Version="2020.3.0" />
