--- a/IntermediatesRemover/IntermediatesRemoverCommon/IntermediatesRemoverCommon.csproj
+++ b/IntermediatesRemover/IntermediatesRemoverCommon/IntermediatesRemoverCommon.csproj
@@ -6,6 +6,11 @@
     <CodeAnalysisRuleSet>..\IntermediatesRemover.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>none</DebugType>
+    <DebugSymbols>false</DebugSymbols>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.0">
       <PrivateAssets>all</PrivateAssets>
